plugins {
    id 'java'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
    id 'nebula.lint' version '20.6.2'
}

group 'no.unit.alma'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21  // source-code version and must be <= targetCompatibility
    targetCompatibility = JavaVersion.VERSION_21 // bytecode target version
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
    gradleVersion = "8.14.3"
}

dependencies {
    implementation group: 'org.marc4j', name: 'marc4j', version: '2.9.2'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
    implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
    implementation group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '3.11.0'
    implementation group: 'software.amazon.awssdk', name: 'secretsmanager', version: '2.18.10'
    implementation group: 'software.amazon.awssdk', name: 'dynamodb', version: '2.33.9'
    implementation group: 'software.amazon.awssdk', name: 'sqs', version: '2.33.9'
    implementation group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.2.1'
    implementation group: 'com.github.BIBSYSDEV', name: 'marc21-xml-parser', version: '2.11.5'
    implementation group: 'com.github.bibsysdev', name: 'core', version: '1.25.17'
    
    testImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.1'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.8.0'
}

gradleLint {
    rules = ['all-dependency']
    reportFormat = 'html'
    reportOnlyFixableViolations = true
}

tasks.named('test', Test) {
    useJUnitPlatform()
    failFast = true
    finalizedBy jacocoTestReport
    testLogging {
        events 'skipped', 'failed'
    }
}

pmd {
    toolVersion = '7.16.0'
    ruleSetConfig = rootProject.resources.text.fromFile('config/pmd/ruleset.xml')
    ruleSets = []
    ignoreFailures = false
}

checkstyle {
    toolVersion = '10.26.0'
    configFile = rootProject.resources.text.fromFile('config/checkstyle/checkstyle.xml').asFile()
    showViolations = true
}

tasks.withType(Checkstyle).configureEach {
    reports {
        html.required
        html.stylesheet = rootProject.resources.text.fromFile('config/checkstyle/checkstyle-simple.xsl')
    }
}

jacocoTestReport {
    reports {
        html.outputLocation.set(layout.buildDirectory.dir("reports/jacoco"))
    }
}

tasks.named('check').configure {
    dependsOn tasks.named('jacocoTestCoverageVerification')
}

tasks.named('jacocoTestCoverageVerification').configure {
    dependsOn tasks.named('jacocoTestReport')

    violationRules {
        rule {
            limit {
                counter = 'METHOD'
                value = 'COVEREDRATIO'
                minimum = 0.6
            }
        }

        rule {
            limit {
                counter = 'CLASS'
                value = 'COVEREDRATIO'
                minimum = 0.6
            }
        }
    }
}
